nav text hover color to black

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
 }
 
 
-#footer {
+#footer, .widget-container.contact {
     font-size: 13px;
+}
+
+#navigation ul li a:hover{
+    color:#000;
 }
